/*
 * Copyright 2018 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.google.android.gnd.model";

package gnd;

message Form {
  string id = 1;

  map<string, string> title = 2;

  repeated Element elements = 3;

  message Element {
    string id = 1;

    oneof element_type {
      Field field = 2;
      Form subform = 3;
    }
  }

  message Field {
    string id = 1;

    map<string, string> label = 2;

    bool required = 3;

    oneof field_type {
      TextField text_field = 4;

      MultipleChoice multiple_choice = 5;
    }
  }

  message TextField {

  }

  message MultipleChoice {
    message Option {
      string code = 1;
      map<string, string> labels = 2;
    }
    repeated Option options = 1;

    enum Cardinality {
      UNKNOWN = 0;
      SELECT_ONE = 1;
      SELECT_MULTIPLE = 2;
    }
    Cardinality cardinality = 2;
  }

  message RadioButtons {

  }
}